src/assets/styles/main.css
/* FONTS */
* {
    box-sizing: border-box;
}

h1,
h2,
h3 {
    font-family: neue-haas-grotesk-display, sans-serif !important;
    font-display: swap;
}

ul,
li,
p,
p em,
p a,
button,
:before,
nav a,
.pswp__counter,
.tooltip {
    font-family: proxima-nova, sans-serif !important;
    font-display: swap;
}

/* BASE FONT SIZE */
html {
    font-size: 17.5px;
}

@media (max-width: 450px) {
    html {
        font-size: 15.5px;
    }
}

#app {
    min-height: 100vh;
    background: #333;
}

h1,
h2 {
    font-weight: 700;
    letter-spacing: 0.3px;
    color: #ddd;
}

h1 {
    font-size: 1.4rem;
    letter-spacing: 10px;
    line-height: 100%;
    margin-bottom: 1px;
}

h2 {
    font-size: 1.5rem;
    line-height: 130%;
    margin-bottom: 20px;
    margin-top: 20px;
}

p {
    font-size: 1rem;
    font-weight: 300;
}

p a {
    color: white;
}

/* LAYOUT */

/* #app {
    background: #333;
} */

.container {
    max-width: 600px;
    margin: 40px auto;
    padding: 10px;
}

.container p {
    font-size: 1.2rem;
    line-height: 130%;
    margin-bottom: 25px;
    color: #ddd;
}

nav {
    display: flex;
    align-items: center;
    padding: 10px 12px;
}

.nav-button {
    font-size: 0.9rem;
    letter-spacing: 3px;
    font-weight: 700;
    color: #ddd;
    text-transform: uppercase;
    text-decoration: none;
}

.nav-button:hover {
    cursor: pointer;
}

.nav-button.active {
    text-decoration: underline;
}

.nav-button:not(:last-of-type) {
    margin-right: 15px;
}

h1,
.nav-button {
    transition: all 0.4s;
}


.photoswipe-gallery {
    position: relative;
    display: grid;
    justify-content: center;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr) ) ;    
    grid-auto-rows: 200px;
    grid-auto-flow: dense;
    margin: 0 auto;
}

.photoswipe-image:hover {
    cursor: pointer;
}

.photoswipe-image {
    width: 100%;
    background-size: cover;
    background-position: 50% 0%;grid-row-end: span 2;
}

.photoswipe-image.wide {
    grid-column-end: span 2; 
}

.photoswipe-image.large {
    grid-column-end: span 2; 
    grid-row-end: span 4
}

@media (min-width: 600px) {
    .title-link {
        transition: transform 0.4s;
        transform: translate(18px, 18px);
    }
}

@media (max-width: 450px) {
    .photoswipe-gallery {
        grid-template-columns: 1fr 1fr 1fr;   
        grid-auto-rows: 175px; 
    }

    .photoswipe-image {
        grid-column-end: span 1 !important;
        grid-row-end: span 1 !important;
    }

    .photoswipe-image.wide {
        grid-column-end: span 2 !important; 
    }

    .photoswipe-image.large {
        grid-column-end: span 2 !important; 
        grid-row-end: span 2 !important;
    }

    h1 {
        font-size: 1.2rem;
    }

    .photonav {
        justify-content: space-between !important;
    }

    .nav-button {
        font-size: 0.7rem;
        margin: 0 !important;
    }
}

.photoswipe-image img {
    width: 100%;
    height: auto;

    opacity: 0;
} */

/* TRANSITIONS */

.cell {
    transition: all 0.5s ease-in-out;
}

.cell-move {
    transition: transform 0.5s ease;
}

.cell-enter {
    transition: all 0.5s ease-in-out;
    opacity: 0;
}

.cell-enter-to {
    transition: all 0.5s ease-in-out;
    opacity: 1;
}

.cell-leave {
    transition: all 0.5s ease-in-out;
    opacity: 1;
}

.cell-leave-to {
    transition: all 0.5s ease-in-out;
    opacity: 0;
}

.cell-leave-active {
    opacity: 0;
    position: absolute;
    max-width: 200px;
}

/* page router transitions */

.next-right-enter-active,
.next-right-leave-active,
.next-left-enter-active,
.next-left-leave-active,
.prev-right-enter-active,
.prev-right-leave-active,
.prev-left-enter-active,
.prev-left-leave-active {
    -webkit-backface-visibility: hidden;
    -webkit-transform-style: preserve-3d;
    will-change: transform, opacity;
  transition: all 500ms;
  position: absolute;
}

.next-leave-to {
    animation: leaveToLeft 500ms both ease;
}

.next-enter-to {
    animation: enterFromRight 500ms both ease;
}

/* .prev-leave {
    position: absolute;
} */

.prev-leave-to {
    animation: leaveToRight 500ms both ease;
    position: absolute;
}

.prev-enter-to {
    animation: enterFromLeft 500ms both ease;
    position: absolute;
}

@keyframes leaveToLeft {
    from {
        transform: translateX(0);
    }
    to {
        transform: translateX(-100vw);
    }
}

@keyframes enterFromLeft {
    from {
        transform: translateX(-100vw);
    }
    to {
        transform: translateX(0);
    }
}

@keyframes leaveToRight {
    from {
        transform: translateX(0);
    }
    to {
        transform: translateX(100vw);
    }
}

@keyframes enterFromRight {
    from {
        transform: translateX(100vw);
    }
    to {
        transform: translateX(0);
    }
}

